# export-ticktick

./: .gitignore  .http  CNAME  Cargo.toml  README.md  build.ps1
_scripts/: build-linux.ps1  build-mac.ps1  build-win.ps1
docs/: CNAME  index.html
src/: api.rs  config.example.rs  main.rs
